product/common/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bottle-story-prod
  namespace: bottle-story-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
    - host: bottle-story.com
      http:
        paths:
          - path: /api/v1/member
            pathType: Prefix
            backend:
              service:
                name: backend-bottle-member-service
                port:
                  number: 80
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: backend-bottle-member-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: backend-bottle-member-service
                port:
                  number: 80
          - path: /api/v1/bottle
            pathType: Prefix
            backend:
              service:
                name: backend-bottle-bottlesv-service
                port:
                  number: 80
          - path: /api/v1/realtime
            pathType: Prefix
            backend:
              service:
                name: backend-bottle-realtime-service
                port:
                  number: 80
          - path: /api/v1/wheatherbgm
            pathType: Prefix
            backend:
              service:
                name: backend-bottle-wheatherbgm-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - bottle-story.com
      secretName: bottle-story-prod-tls
